fixing alignment again

--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,9 @@
-* {
+html {
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
-}
 
-html {
 	font-size: 62.5%;
-}
-
-#root {
 	display: flex;
 	justify-content: center;
 }
