--- a/src/components/DigitalClock/styles.css
+++ b/src/components/DigitalClock/styles.css
@@ -3,6 +3,5 @@
 	flex-direction: row;
 	border: 1px solid black;
 	border-radius: 8px;
-	justify-content: center;
-	overflow-x: scroll;
+	padding: 0 3.6rem;
 }
