--- a/src/components/PomodoroTimer/styles.css
+++ b/src/components/PomodoroTimer/styles.css
@@ -5,7 +5,6 @@
 	padding: 3.6rem;
 	row-gap: 2.4rem;
 	border-radius: 8px;
-	width: 100vw;
 	max-width: 60rem;
 }
 
